--- a/app/src/main/res/layout/activity_listar_evento.xml
+++ b/app/src/main/res/layout/activity_listar_evento.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tiagocardoso.eventool.Listar_usuarioActivity">
+    tools:context="com.example.tiagocardoso.eventool.Listar_EventoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="389dp"
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarEvt"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -20,14 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/actionBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+    <include layout="@layout/content_lista_evento" />
 
-    <include layout="@layout/content_lista_usuario" />
+
 
 </android.support.design.widget.CoordinatorLayout>
+
