--- a/app/src/main/res/layout/evento_item.xml
+++ b/app/src/main/res/layout/evento_item.xml
@@ -5,15 +5,23 @@
 
 
     <TextView
-        android:id="@+id/textNome"
+        android:id="@+id/nomeEvento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/textSobrenome"
+        android:id="@+id/descricaoEvento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/textTelefone"
+        android:id="@+id/localEvento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/dataEvento"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
+
