--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/festa1"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.example.tiagocardoso.eventool.MainActivity">
 
     <Button
-        android:onClick="selectMainOpetion"
         android:id="@+id/btnInserir"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Inserir Usuario" />
-    <Button
+        android:layout_alignBaseline="@+id/btnListar"
+        android:layout_alignBottom="@+id/btnListar"
+        android:layout_alignParentStart="true"
         android:onClick="selectMainOpetion"
+        android:text="Convidar Amigos" />
+
+    <Button
         android:id="@+id/btnListar"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ver usuarios" />
-</LinearLayout>
+        android:layout_above="@+id/btnListarEvento"
+        android:layout_alignParentEnd="true"
+        android:onClick="selectMainOpetion"
+        android:text="Meus Convidados" />
+
+    <Button
+        android:id="@+id/btnListarEvento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:onClick="selectMainOpetion"
+        android:text="Eventos" />
+</RelativeLayout>
