--- a/app/src/main/res/layout/content_lista_evento.xml
+++ b/app/src/main/res/layout/content_lista_evento.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_list_user"
@@ -11,11 +11,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.tiagocardoso.eventool.Listar_usuarioActivity"
-    tools:showIn="@layout/activity_lista_usuario">
+    tools:context="com.example.tiagocardoso.eventool.Listar_EventoActivity"
+    tools:showIn="@layout/activity_listar_evento">
 
     <ListView
-        android:id="@+id/listUsuarios"
+        android:id="@+id/listEventos"
         android:layout_width="match_parent"
         android:layout_height="229dp"
         android:layout_alignParentBottom="true"
@@ -24,4 +24,4 @@
 
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
